k8s/pma-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -o k8s/
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: pma
  name: pma
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pma
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -o k8s/
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: pma
    spec:
      containers:
      - env:
        - name: PMA_HOST
          value: db
        - name: PMA_PORT
          value: "3306"
        image: phpmyadmin/phpmyadmin:4.9
        imagePullPolicy: ""
        name: pma
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
