k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -o k8s/
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -o k8s/
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: app
    spec:
      containers:
      - env:
        - name: APPLICATION_SECRET
          value: p4EJZg5rzl1xDSAMdGJfLUXKrFYozhrEpl5WSV4quyNouQPAtvlTFXwQBWE8J1wX
        - name: DB_HOST
          value: db:3306
        - name: DB_NAME
          value: mydb
        - name: DB_PASSWORD
          value: mypassword
        - name: DB_USER
          value: myuser
        image: k8s-playground-app:latest
        imagePullPolicy: Never
        name: app
        ports:
        - containerPort: 9000
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert -o k8s/
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: app
status:
  loadBalancer: {}
