k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
    - port: 3306
  selector:
    io.kompose.service: db
  clusterIP: None
