k8s/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -o k8s/
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -o k8s/
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: mydb
            - name: MYSQL_USER
              valueFrom:
                secretKeyRef:
                  name: k8s-secrets
                  key: MYSQL_USER
            - name: MYSQL_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: k8s-secrets
                  key: MYSQL_PASSWORD
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: k8s-secrets
                  key: MYSQL_ROOT_PASSWORD
          image: mysql:5.7
          imagePullPolicy: ""
          name: db
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
    - port: 3306
  selector:
    io.kompose.service: db
  clusterIP: None
