k8s/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    resource:
      apiGroup: k8s.example.com
      kind: StorageBucket
      name: static-assets
  rules:
    - http:
        paths:
          - path: /pma
            pathType: Prefix
            backend:
              service:
                name: pma
                port:
                  number: 8080
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 9000
